# commander

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hotkey.py  main.py  pyproject.toml  requirements.txt  speech_client.py  tray_app.py  utils.py
command/: __main__.py  tray_app.py  utils.py
commander/: __init__.py  __main__.py  control_agent.py  speech_client.py  system_audio.py  tray_app.py  utils.py
